// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PartyRequestFormModal
    onCloseClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
        <div
                className="wh100 m-auto flex flex-column mb3 justify-center"
        >
                <div
                        className="absolute t0 l0 w100 p3 overflow-scroll"
                >
                        <h3
                                className="callout mb3"
                        />
                </div>
                <div
                        className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
                >
                        <Button
                                childrenWrapperClassName=""
                                className=""
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                openInCurrentTab={false}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary-small"
                        />
                </div>
        </div>
</div>,
      "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 m-auto flex flex-column mb3 justify-center"
>
          <div
                    className="absolute t0 l0 w100 p3 overflow-scroll"
          >
                    <h3
                              className="callout mb3"
                    />
          </div>
          <div
                    className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
          >
                    <Button
                              childrenWrapperClassName=""
                              className=""
                              color="madison-blue"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label="Close"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              openInCurrentTab={false}
                              shadow={false}
                              to=""
                              type="button"
                              variant="primary-small"
                    />
          </div>
</div>,
        "className": "wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="absolute t0 l0 w100 p3 overflow-scroll"
>
              <h3
                            className="callout mb3"
              />
</div>,
            <div
              className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
>
              <Button
                            childrenWrapperClassName=""
                            className=""
                            color="madison-blue"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label="Close"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            openInCurrentTab={false}
                            shadow={false}
                            to=""
                            type="button"
                            variant="primary-small"
              />
</div>,
          ],
          "className": "wh100 m-auto flex flex-column mb3 justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3
                  className="callout mb3"
/>,
                undefined,
              ],
              "className": "absolute t0 l0 w100 p3 overflow-scroll",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "callout mb3",
                },
                "ref": null,
                "rendered": null,
                "type": "h3",
              },
              undefined,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Button
                childrenWrapperClassName=""
                className=""
                color="madison-blue"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="Close"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to=""
                type="button"
                variant="primary-small"
/>,
              "className": "absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "childrenWrapperClassName": "",
                "className": "",
                "color": "madison-blue",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "Close",
                "onClick": [Function],
                "onMouseEnter": [Function],
                "onMouseLeave": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "primary-small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
          <div
                    className="wh100 m-auto flex flex-column mb3 justify-center"
          >
                    <div
                              className="absolute t0 l0 w100 p3 overflow-scroll"
                    >
                              <h3
                                        className="callout mb3"
                              />
                    </div>
                    <div
                              className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
                    >
                              <Button
                                        childrenWrapperClassName=""
                                        className=""
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Close"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary-small"
                              />
                    </div>
          </div>
</div>,
        "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="wh100 m-auto flex flex-column mb3 justify-center"
>
            <div
                        className="absolute t0 l0 w100 p3 overflow-scroll"
            >
                        <h3
                                    className="callout mb3"
                        />
            </div>
            <div
                        className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
            >
                        <Button
                                    childrenWrapperClassName=""
                                    className=""
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Close"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="primary-small"
                        />
            </div>
</div>,
          "className": "wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="absolute t0 l0 w100 p3 overflow-scroll"
>
                <h3
                                className="callout mb3"
                />
</div>,
              <div
                className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
>
                <Button
                                childrenWrapperClassName=""
                                className=""
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                openInCurrentTab={false}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary-small"
                />
</div>,
            ],
            "className": "wh100 m-auto flex flex-column mb3 justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h3
                    className="callout mb3"
/>,
                  undefined,
                ],
                "className": "absolute t0 l0 w100 p3 overflow-scroll",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "callout mb3",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "h3",
                },
                undefined,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  childrenWrapperClassName=""
                  className=""
                  color="madison-blue"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="Close"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  openInCurrentTab={false}
                  shadow={false}
                  to=""
                  type="button"
                  variant="primary-small"
/>,
                "className": "absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "childrenWrapperClassName": "",
                  "className": "",
                  "color": "madison-blue",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "Close",
                  "onClick": [Function],
                  "onMouseEnter": [Function],
                  "onMouseLeave": [Function],
                  "openInCurrentTab": false,
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "primary-small",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PartyRequestFormModal />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
        <div
                className="wh100 m-auto flex flex-column mb3 justify-center"
        >
                <div
                        className="absolute t0 l0 w100 p3 overflow-scroll"
                >
                        <h3
                                className="callout mb3"
                        />
                </div>
                <div
                        className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
                >
                        <Button
                                childrenWrapperClassName=""
                                className=""
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                openInCurrentTab={false}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary-small"
                        />
                </div>
        </div>
</div>,
      "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 m-auto flex flex-column mb3 justify-center"
>
          <div
                    className="absolute t0 l0 w100 p3 overflow-scroll"
          >
                    <h3
                              className="callout mb3"
                    />
          </div>
          <div
                    className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
          >
                    <Button
                              childrenWrapperClassName=""
                              className=""
                              color="madison-blue"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label="Close"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              openInCurrentTab={false}
                              shadow={false}
                              to=""
                              type="button"
                              variant="primary-small"
                    />
          </div>
</div>,
        "className": "wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="absolute t0 l0 w100 p3 overflow-scroll"
>
              <h3
                            className="callout mb3"
              />
</div>,
            <div
              className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
>
              <Button
                            childrenWrapperClassName=""
                            className=""
                            color="madison-blue"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label="Close"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            openInCurrentTab={false}
                            shadow={false}
                            to=""
                            type="button"
                            variant="primary-small"
              />
</div>,
          ],
          "className": "wh100 m-auto flex flex-column mb3 justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3
                  className="callout mb3"
/>,
                undefined,
              ],
              "className": "absolute t0 l0 w100 p3 overflow-scroll",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "callout mb3",
                },
                "ref": null,
                "rendered": null,
                "type": "h3",
              },
              undefined,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Button
                childrenWrapperClassName=""
                className=""
                color="madison-blue"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="Close"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to=""
                type="button"
                variant="primary-small"
/>,
              "className": "absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "childrenWrapperClassName": "",
                "className": "",
                "color": "madison-blue",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "Close",
                "onClick": [Function],
                "onMouseEnter": [Function],
                "onMouseLeave": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "primary-small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
          <div
                    className="wh100 m-auto flex flex-column mb3 justify-center"
          >
                    <div
                              className="absolute t0 l0 w100 p3 overflow-scroll"
                    >
                              <h3
                                        className="callout mb3"
                              />
                    </div>
                    <div
                              className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
                    >
                              <Button
                                        childrenWrapperClassName=""
                                        className=""
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Close"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary-small"
                              />
                    </div>
          </div>
</div>,
        "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="wh100 m-auto flex flex-column mb3 justify-center"
>
            <div
                        className="absolute t0 l0 w100 p3 overflow-scroll"
            >
                        <h3
                                    className="callout mb3"
                        />
            </div>
            <div
                        className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
            >
                        <Button
                                    childrenWrapperClassName=""
                                    className=""
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Close"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="primary-small"
                        />
            </div>
</div>,
          "className": "wh100 modal modal--light-gray-border max-width-2 mx-auto relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="absolute t0 l0 w100 p3 overflow-scroll"
>
                <h3
                                className="callout mb3"
                />
</div>,
              <div
                className="absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center"
>
                <Button
                                childrenWrapperClassName=""
                                className=""
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                openInCurrentTab={false}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary-small"
                />
</div>,
            ],
            "className": "wh100 m-auto flex flex-column mb3 justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h3
                    className="callout mb3"
/>,
                  undefined,
                ],
                "className": "absolute t0 l0 w100 p3 overflow-scroll",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "callout mb3",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "h3",
                },
                undefined,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  childrenWrapperClassName=""
                  className=""
                  color="madison-blue"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="Close"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  openInCurrentTab={false}
                  shadow={false}
                  to=""
                  type="button"
                  variant="primary-small"
/>,
                "className": "absolute b0 l0 w100 p2 bg-white flex flex-row justify-end items-center",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "childrenWrapperClassName": "",
                  "className": "",
                  "color": "madison-blue",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "Close",
                  "onClick": [Function],
                  "onMouseEnter": [Function],
                  "onMouseLeave": [Function],
                  "openInCurrentTab": false,
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "primary-small",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
